<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventname"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventtype"/>

    <TextView
            android:id="@+id/eventID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventtype"/>

    <TextView
            android:id="@+id/event_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventcity"/>
    <TextView
            android:id="@+id/event_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventstart"/>
    <TextView
            android:id="@+id/event_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventend"/>
    <TextView
            android:id="@+id/venue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/venuename"/>

    <TextView
            android:id="@+id/venue_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/venueaddress"/>

</LinearLayout>