<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">



    <TextView
            android:id="@+id/show_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventname"
            android:textStyle="bold" android:textColor="#3F51B5" android:autoText="true" android:textSize="25sp"/>

    <TextView
            android:id="@+id/show_event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="Event ID" android:textColor="#3F51B5"/>

    <TextView
            android:id="@+id/show_event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventtype" android:textColor="#3F51B5"/>
    <TextView
            android:id="@+id/show_event_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventcity" android:textColor="#3F51B5"/>
    <TextView
            android:id="@+id/show_event_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventstart" android:textColor="#3F51B5"/>
    <TextView
            android:id="@+id/show_event_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventend" android:textColor="#3F51B5"/>

    <TextView
            android:id="@+id/event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/eventend" android:textColor="#3F51B5"/>


    <TextView
            android:id="@+id/show_venue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/venuename" app:autoSizeTextType="uniform" android:textColor="#3F51B5"/>

    <TextView
            android:id="@+id/venue_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/venueaddress" android:textColor="#3F51B5"/>

</LinearLayout>